# Kubernetes-Clone

./: Documentation.md  Group43_Kubernetes_Clone_Documentation.md  Makefile  README.md  cludter.db  cluster.db  go.work  golang_cluster.db  my.db  python_cluster.db
Documents/: Documentation.md  README.md
Documents/go/: README.md
Documents/python/: README.md
go/: README.md  go.mod  kclone
go/cmd/demo/: main.go
go/cmd/kclone/: commands.go  main.go
go/pkg/controllers/: controllers.go
go/pkg/db/: sqlite.go
go/pkg/lifecycle/: lifecycle.go
go/pkg/models/: models.go
go/pkg/persistence/: persistence.go
go/pkg/resource/: resource.go
go/pkg/scheduler/: scheduler.go
go/pkg/service/: service.go
go/pkg/state/: state.go
python/: README.md  kclone  pyproject.toml  requirements.txt
python/src/kclone/: __init__.py  cli.py  controllers.py  db.py  lifecycle.py  models.py  persistence.py  resource.py  scheduler.py  service.py  state.py  worker.py
python/src/kclone.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/tests/: test_db.py
src/kclone/: controllers.py  lifecycle.py  persistence.py  scheduler.py
tests/: test_core.py
