[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kclone"
version = "0.1.0"
description = "Simplified Kubernetes clone for teaching"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["click>=8.1.7", "tabulate>=0.9.0", "psutil>=5.9.5"]

[tool.setuptools.packages.find]
where = ["src"]
